8 Seminari 'CSS + git' punkt

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="et"><head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Lehe päis</title>
 <script data-name="TokenSigning" data-by="Web-eID extension">(function pageScript() {
