--- a/janser.html
+++ b/janser.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janseri pealkiri</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <div class="veerg">
+    <div class="tulp">
     <h1>Ma ei tea, nt Hondad</h1>
     <p>Kui olin 12-13 aastat vana hakkasid mulle autod meeldima. Alguses golf 3 millegi pärast :d. Aga praeguseks pigem Jaapani autod. Mingi hetk hakkasid ka Honda Civicud meeldima. Praegu oman kahte.</p>
     <br>
     <a href="https://en.wikipedia.org/wiki/Honda_Civic" target="_blank">Ma ei tea, Civic wikileht</a>
     <br><br>
-    <img src="https://momo.com/wp-contents/uploads/2019/01/AWD-Swapped-Turbo-Honda-Civic-EF-Party-Wagon-With-MOMO-Parts-Featured-Image-1-600x338.jpg" alt="Mingi pilt Civic Shuttle'st">
+    <img src="https://i.pinimg.com/originals/f8/9e/34/f89e34c2ce605f9008735d7bd85df201.jpg" alt="Mingi pilt Civic'ust">
+    </div>
+    <div class="tulp">
     <h2>Mulle meeldivate civicute nn. kerekoodide loetelu</h2>
     <ul>
         <li>"EF"</li>
         <li>"EG"</li>
         <li>"EK"</li>
     </ul>
-    <table border="1">
+    <table>
         <tr>
             <th>EF</th>
             <th>EG</th>
@@ -39,6 +44,8 @@
     </table>
     <br>
     <a href="janser2.html">Kliki siia, et minna järgmisele lehele [no scam] [no virus]</a>
+    </div>
+    </div>
 </body>
 
 </html>
